Added auto quote update and random colour

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,12 @@ h1 {
   font-style: italic;
 }
 
+
+.tags:before {
+  content: ", ";
+  font-style: normal;
+}
+
 .citation:before {
   content: ", ";
   font-style: normal;
